tests/samples/expression-invalid-3/error.full.txt
Invalid number "4.25.8" found on line 2 at index 49.

1|// error: 4.25.8
2|        {(na9me_.a().pm["[]"][mop]["mop'op"].mm(4.25.8,'oplm').tty + 9  + (mmo[lm])){}}
                                                  ^
3|

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 45
#0 /mnt/Emile/silassare/blate/src/Lexer.php(562): Blate\Exceptions\BlateRuntimeException::withChunk()
#1 /mnt/Emile/silassare/blate/src/Lexer.php(371): Blate\Lexer->eatNumber()
#2 /mnt/Emile/silassare/blate/src/Lexer.php(99): Blate\Lexer->computeToken()
#3 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(57): Blate\Lexer->move()
#4 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(142): Blate\Expressions\Grammar\Parenthesis->handle()
#5 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(40): Blate\Expressions\ExpressionParser->parse()
#6 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(142): Blate\Expressions\Grammar\Parenthesis->handle()
#7 /mnt/Emile/silassare/blate/src/Expressions/Expression.php(31): Blate\Expressions\ExpressionParser->parse()
#8 /mnt/Emile/silassare/blate/src/Parser.php(142): Blate\Expressions\Expression->get()
#9 /mnt/Emile/silassare/blate/src/Parser.php(94): Blate\Parser->expression()
#10 /mnt/Emile/silassare/blate/src/Blate.php(143): Blate\Parser->parse()
#11 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(261): Blate\Blate->parse()
#12 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(88): Blate\Tests\TemplateSyntaxTest->runInvalid()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1545): Blate\Tests\TemplateSyntaxTest->testExpressionInvalid3()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1151): PHPUnit\Framework\TestCase->runTest()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(726): PHPUnit\Framework\TestCase->runBare()
#16 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(903): PHPUnit\Framework\TestResult->run()
#17 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestCase->run()
#18 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#19 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#20 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(673): PHPUnit\Framework\TestSuite->run()
#21 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(143): PHPUnit\TextUI\TestRunner->run()
#22 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(96): PHPUnit\TextUI\Command->run()
#23 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(98): PHPUnit\TextUI\Command::main()
#24 {main}